[tool.poetry]
name = "cybsi-sdk"
version = "2.8.0a3"
description = "Cybsi development kit"
authors = ["Cybsi developers"]
license = "MIT"
packages = [
    { include = "cybsi" },
]
include = ["cybsi/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26"
enum-tools = "0.6.5"
typing-extensions = {version = "^4.1.1", markers = "python_version < '3.8'" }

[tool.poetry.dev-dependencies]
isort = "5.10.1"
black = "21.10b0"
flake8 = "3.9.2"
mypy = "0.910"
types-requests = "2.25.9"
Sphinx = "4.2.0"
sphinx_toolbox = "2.15.2"
"sphinxjp.themes.basicstrap" = "0.5.0"
sphinx-autodoc-typehints = "1.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
extend_skip = ["__init__.py"]
