[tool.poetry]
name = "cybsi-sdk"
version = "2.12.0a3"
description = "Cybsi development kit"
authors = ["Cybsi SDK developers"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    { include = "cybsi" },
]
include = ["cybsi/py.typed"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
enum-tools = "0.9.0.post1"
typing-extensions = { version = "^4.1.1", markers = "python_version < '3.8'" }
httpx = "^0.23.1"

[tool.poetry.group.dev.dependencies]
tbump = "6.8.0"
aiofiles = "23.2.1"
types-aiofiles = "23.2.0"
aiohttp = "3.8.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.1"

[tool.poetry.group.lint.dependencies]
black = "22.3.0"
flake8 = "4.0.1"
mypy = "0.991"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
extend_skip = ["__init__.py"]

[tool.tbump]

[tool.tbump.version]
current = "2.12.0a3"

regex = '''
  ^
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<extra>[ab]\d+)?
  $
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "cybsi/__version__.py"

[[tool.tbump.before_commit]]
name = "Update changelog and check if it contains new version"
cmd = "./update-changelog.sh {new_version}"
